Sets the padding on correct CodeMirror elements so that text selection doesn't overflow on the right.

--- a/tool-ui/src/main/webapp/style/v3/rte2.less
+++ b/tool-ui/src/main/webapp/style/v3/rte2.less
@@ -530,7 +530,11 @@ li.CodeMirror-hint-active {
       width: 60em;
 
       .CodeMirror-lines {
-        padding: 30px;
+        padding: 30px 0;
+      }
+
+      pre {
+        padding: 0 30px;
       }
     }
   }
@@ -540,13 +544,13 @@ li.CodeMirror-hint-active {
     font-family:inherit;
 
     .CodeMirror-lines {
-      padding: 5px 6px;
+      padding: 5px 0;
     }
 
     pre {
       font-family:inherit;
       counter-reset: brightspot_ol_counter;
-      padding: 0;
+      padding: 0 6px;
     }
     .rte2-style-ul {
       padding-left: 2em;
